--- a/layouts/partials/comments/provider/utterances.html
+++ b/layouts/partials/comments/provider/utterances.html
@@ -1,12 +1,9 @@
-<script src="https://utteranc.es/client.js" 
-        repo="{{ .Site.Params.comments.utterances.repo }}"
-        issue-term="{{ .Site.Params.comments.utterances.issueTerm }}"
-        {{ with .Site.Params.comments.utterances.label }}
-        label="{{ . }}"
-        {{ end }}
+<script src="https://utteranc.es/client.js"
+        repo="rayspersonalblog/rayspersonalblog.github.io"
+        issue-term="pathname"
+        theme="github-dark-orange"
         crossorigin="anonymous"
-        async
-        >
+        async>
 </script>
 
 <style>
